# finance_agent

./: .gitignore  README.md  finance.db  mcp.json  pyproject.toml  requirements.txt
memory/chroma/: chroma.sqlite3
src/finance_agent/agent/: categorizer.py  mcp_tools.py  router.py  tools.py
src/finance_agent/data/: db.py  embeddings.py
src/finance_agent/domain/: models.py
src/finance_agent/intelligence/: anomaly.py
src/finance_agent/interfaces/: api.py  app.py  cli.py
src/finance_agent/memory/: memory_policy.py  memory_store.py
src/finance_agent/services/: anomaly_detection.py  ledger.py  receipt_ingestion.py  statement_ingestion.py
src/finance_agent/tools/: fx.py  gdelt_news.py  news.py  pdf_statement.py  receipt_ocr.py  receipt_parser.py  research.py  sentiment.py  trusted_news.py
