[project]
name = "finance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.6",
    "fastapi>=0.124.4",
    "fastapi-cors>=0.0.6",
    "langchain>=1.1.3",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.2",
    "matplotlib>=3.10.8",
    "mcp-use>=1.5.0",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "pypdf>=6.4.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]

[tool.uv]
package = true

[tool.uv.sources]
finance_agent = { path = "src/finance_agent" }
